<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_show_chart">ShowChart</string>
    <string name="graph">BarGraph</string>
    <string name="app_name">Smoke Free</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="instruction">Tap on the cigarette every time you smoke one</string>
    <string name="duration">#### minutes since you smoked last cigarette</string>
    <string name="craving">Tap to Stop Craving</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_health_tips_by_time">HealthTipsByTime</string>

</resources>