<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/dp32"
        android:gravity="center"
         />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/instruction"
        android:textColor="@color/black"
        android:textSize="@dimen/dp16"
        android:gravity="center"
         />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:padding="@dimen/activity_horizontal_margin"
            tools:context=".HomePage" >

            <ImageButton
                android:id="@+id/cigarette1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher" />
            
           <ImageButton
                android:id="@+id/cigarette2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher" />

           <ImageButton
                android:id="@+id/cigarette3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
               android:adjustViewBounds="true"
                android:src="@drawable/ic_launcher" />
           
        </LinearLayout>
        
<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:padding="@dimen/activity_horizontal_margin"
            tools:context=".HomePage" >
            
            
            <ImageButton
                android:id="@+id/cigarette4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@android:drawable/ic_dialog_email" />

           <ImageButton
                android:id="@+id/cigarette5"
               android:layout_width="100dp"
               android:layout_height="match_parent"
               android:adjustViewBounds="true"
               android:src="@android:drawable/ic_dialog_email" />

           <ImageButton
               android:id="@+id/cigarette6"
               android:layout_width="100dp"
               android:layout_height="match_parent"
               android:adjustViewBounds="true"
               android:src="@android:drawable/ic_dialog_email" />
           
        </LinearLayout>
        
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textSize="@dimen/dp16"
        android:gravity="center"
         />

    <Button
        android:id="@+id/stop_craving_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stop"
        android:text="@string/craving"
        android:textColor="@color/black"
        android:textSize="@dimen/dp32" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".HomePage" >

        <Button
            android:id="@+id/statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/statistics"
            android:onClick="getStatistics"
            android:textSize="@dimen/dp32" />
        
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/settings"
            android:textSize="@dimen/dp32" />
        
    </RelativeLayout>
    
    
    
</LinearLayout>